<resources>
    <string name="app_name">GitHubApp</string>
    <string name="sign_in_to_github">Sign in to GitHub</string>
    <string name="username_or_email">Username or email address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="search">Search</string>
    <string name="search_or_jump_to">Search or jump to…</string>
    <string name="watch">Watch</string>
    <string name="star">Star</string>
    <string name="fork">Fork</string>
    <string name="issue">Issues</string>
    <string name="open_to_work">Open to work</string>
    <string name="biography">Biography</string>
    <string name="gists">Gists</string>
    <string name="repositories">Repositories</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="blog">Blog</string>
    <string name="view_details">View details</string>

    <string name="updated">Updated %s</string>
    <string name="created">Created %s</string>
    <string name="updated_new_line">Updated\n %s</string>
    <string name="created_new_line">Created\n %s</string>

    <string name="best_match">Best match</string>
    <string name="stars">Stars</string>
    <string name="forks">Forks</string>
    <string name="sort_updated">Updated</string>

    <string name="query_is_empty">Query is empty</string>

    <string name="authorizing">Authorizing …</string>

    <string name="welcome">Welcome %s</string>

    <!-- Error Messages -->
    <string name="error_malformed_json">Oops! We hit an error. Try again later!</string>
    <string name="error_timeout">Oooops! We could not capture your request in time. Please try again!</string>
    <string name="error_no_internet_connection">Oh! You are not connected to a wifi or cellular nodeItemRowList network. Please connect and try again!</string>
    <string name="error_unknown">Something went wrong!</string>
</resources>