<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/thumbnail"
                android:layout_width="@dimen/repository_owner_thumbnail_size"
                android:layout_height="@dimen/repository_owner_thumbnail_size" />

            <TextView
                android:id="@+id/fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_toEndOf="@id/thumbnail"
                android:background="?attr/selectableItemBackground"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/color_text_secondary"
                android:textSize="@dimen/text_size_medium" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/fullName"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/xsmall_margin"
                android:layout_toEndOf="@id/thumbnail"
                android:background="?attr/selectableItemBackground"
                android:ellipsize="end"
                android:maxLines="3"
                android:textSize="@dimen/text_size_normal" />

            <LinearLayout
                android:id="@+id/watchersForksIssueLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/thumbnail"
                android:layout_marginTop="@dimen/small_margin"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/xsmall_margin"
                    android:layout_weight="1"
                    android:background="@drawable/chip_background"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/xsmall_padding">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/repository_icons_size"
                        android:layout_height="@dimen/repository_icons_size"
                        android:layout_marginEnd="@dimen/xsmall_margin"
                        app:srcCompat="@drawable/ic_star"
                        app:tint="@color/color_text_primary" />

                    <TextView
                        android:id="@+id/starLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/xsmall_margin"
                        android:gravity="center_vertical"
                        android:includeFontPadding="false"
                        android:text="@string/star"
                        android:textSize="@dimen/text_size_small" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/xsmall_margin"
                        android:background="@color/color_text_primary" />

                    <TextView
                        android:id="@+id/starValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/xsmall_margin"
                        android:gravity="center_vertical"
                        android:includeFontPadding="false"
                        android:textSize="@dimen/text_size_small" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/xsmall_margin"
                    android:layout_weight="1"
                    android:background="@drawable/chip_background"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/xsmall_padding">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/repository_icons_size"
                        android:layout_height="@dimen/repository_icons_size"
                        android:layout_marginEnd="@dimen/xsmall_margin"
                        app:srcCompat="@drawable/ic_fork"
                        app:tint="@color/color_text_primary" />

                    <TextView
                        android:id="@+id/forkLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/xsmall_margin"
                        android:gravity="center_vertical"
                        android:includeFontPadding="false"
                        android:text="@string/fork"
                        android:textSize="@dimen/text_size_small" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/xsmall_margin"
                        android:background="@color/color_text_primary" />


                    <TextView
                        android:id="@+id/forksValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/xsmall_margin"
                        android:gravity="center_vertical"
                        android:includeFontPadding="false"
                        android:textSize="@dimen/text_size_small" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/chip_background"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/xsmall_padding">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/repository_icons_size"
                        android:layout_height="@dimen/repository_icons_size"
                        android:layout_marginEnd="@dimen/xsmall_margin"
                        app:srcCompat="@drawable/ic_issue"
                        app:tint="@color/color_text_primary" />

                    <TextView
                        android:id="@+id/issueLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/xsmall_margin"
                        android:gravity="center_vertical"
                        android:includeFontPadding="false"
                        android:text="@string/issue"
                        android:textSize="@dimen/text_size_small" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/xsmall_margin"
                        android:background="@color/color_text_primary" />

                    <TextView
                        android:id="@+id/issueValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:includeFontPadding="false"
                        android:textSize="@dimen/text_size_small" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/languageUpdateLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/watchersForksIssueLinearLayout"
                android:layout_marginTop="@dimen/small_margin"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/language"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="@dimen/xsmall_padding"
                    android:gravity="center_vertical"
                    android:includeFontPadding="false"
                    app:drawableStartCompat="@drawable/ic_language_icon" />

                <TextView
                    android:id="@+id/update"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:drawablePadding="@dimen/xsmall_padding"
                    android:gravity="center_vertical"
                    android:includeFontPadding="false"
                    app:drawableStartCompat="@drawable/ic_updated" />

            </LinearLayout>

        </RelativeLayout>


        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_text_primary" />

    </LinearLayout>

</layout>